# langchain_project

./: .gitignore  README.md  docker-compose.yml  dockerfile  example.txt  main.py  pyproject.toml
src/: agent.py  prompts.py  register.py
